fixed bug: gap between nav bar and logo. removed empty div. chaned colour for the nava bar logo section to increase visibility

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,10 @@ body {
     color: #555;
     font-family: 'Arial', cursive;
 }
+ 
+#logo-row {
+    background-color: #fff;
+}
 
 /* from Bulma */
 .icon {
